# SimpleNeuralNetwork

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_shapes.py
example/: main.cp.cpp  main.cpp  main2.cpp
include/biai/: network.2.h  network.h  network2.h
src/: network.cpp
